# HouseDB.Core/UseCases/DomoticzCache/GetDomoticzDevicesForValuesCachingHandler.cs
@@ -1,19 +1,25 @@
-﻿using System;
+﻿using AutoMapper;
+using HouseDB.Core.Exceptions;
+using HouseDB.Core.Interfaces;
+using HouseDB.Core.Models;
+using MediatR;
 using System.Collections.Generic;
-using System.Linq;
 using System.Threading;
 using System.Threading.Tasks;
-using HouseDB.Core.Exceptions;
-using MediatR;
-using Microsoft.Extensions.Logging;
 
 namespace HouseDB.Core.UseCases.DomoticzCache
 {
     public class GetDomoticzDevicesForValuesCachingHandler : IRequestHandler<GetDomoticzDevicesForValuesCachingRequest, GetDomoticzDevicesForValuesCachingResponse>
     {
+        private readonly IMapper _mapper;
+        private readonly IDeviceRepository _deviceRepository;
 
-        public GetDomoticzDevicesForValuesCachingHandler()
+        public GetDomoticzDevicesForValuesCachingHandler(
+            IMapper mapper,
+            IDeviceRepository deviceRepository)
         {
+            _mapper = mapper;
+            _deviceRepository = deviceRepository;
         }
 
         public async Task<GetDomoticzDevicesForValuesCachingResponse> Handle(GetDomoticzDevicesForValuesCachingRequest request, CancellationToken cancellationToken)
@@ -26,7 +32,13 @@ namespace HouseDB.Core.UseCases.DomoticzCache
                 throw new MediatRValidationException(result.ToString());
             }
 
-            throw new NotImplementedException();
+            var devices = _deviceRepository.GetAllDevicesForCachingValues();
+            var deviceDTOs = _mapper.Map<List<DeviceDTO>>(devices);
+
+            return new GetDomoticzDevicesForValuesCachingResponse
+            {
+                Devices = deviceDTOs
+            };
         }
     }
 }
