# HouseDB.Core/UseCases/DomoticzCache/GetDomoticzDevicesForValuesCachingResponse.cs
@@ -1,10 +1,10 @@
-﻿using HouseDB.Core.Entities;
+﻿using HouseDB.Core.Models;
 using System.Collections.Generic;
 
 namespace HouseDB.Core.UseCases.DomoticzCache
 {
     public class GetDomoticzDevicesForValuesCachingResponse
     {
-        public List<Device> Devices { get; set; }
+        public List<DeviceDTO> Devices { get; set; }
     }
 }
